--- a/myface-onface-html/src/views/block/_cate-2-nav.html
+++ b/myface-onface-html/src/views/block/_cate-2-nav.html
@@ -1,6 +1,6 @@
 <div class="catebar">
 	<h1 class="category-1-name">
-		thời trang
+		thời trang nữ
 	</h1>
 	<nav class="container navbar category-nav">
 		<ul class="nav navbar-nav cate-list">
