--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -2426,6 +2426,7 @@ footer.main-footer .f-bct > span.bct {
   height: 415px;
   margin-bottom: 15px;
   float: left;
+  overflow: hidden;
 }
 .wrap-banner .banner-item {
   border: 1px solid #dfdfdf;
@@ -2456,35 +2457,35 @@ footer.main-footer .f-bct > span.bct {
   min-height: 100%;
   border-radius: 3px;
 }
-.banner-1 .arrow {
-  width: 36px;
-  height: 80px;
+.arrow {
+  width: 30px;
+  height: 60px;
   position: absolute;
   top: 50%;
   left: 0;
-  margin-top: -40px;
+  z-index: 3;
+  margin-top: -30px;
   cursor: pointer;
   background-color: rgba(255, 255, 255, 0.7);
   border-color: transparent;
   border-radius: 0 3px 3px 0;
   opacity: 0;
 }
-.banner-1 .arrow:hover {
-  background-color: rgba(255, 87, 34, 0.7);
-  color: #fff;
+.arrow:hover {
+  background-color: #ffffff;
 }
-.banner-1 .arrow .icon:before {
+.arrow .icon:before {
   content: "\f104";
-  font-size: 33px;
+  font-size: 28px;
 }
-.banner-1 .arrow.arrow-right {
+.arrow.arrow-right {
   left: auto;
   right: 0;
   border-radius: 3px 0 0 3px;
 }
-.banner-1 .arrow.arrow-right .icon:before {
+.arrow.arrow-right .icon:before {
   content: "\f105";
-  margin-left: 8px;
+  margin-left: 5px;
 }
 .banner-2 {
   height: 250px;
@@ -2566,6 +2567,88 @@ footer.main-footer .f-bct > span.bct {
 .btn-loadmore:hover {
   color: #fff;
   background-color: #ff5722;
+}
+/*myface-shop-list*/
+.m-shop-list .list-row {
+  float: left;
+  padding-top: 20px;
+  border-top: 1px solid #dfdfdf;
+}
+.m-shop-list .list-row:first-child {
+  padding-top: 0;
+  border-top-color: transparent;
+}
+.m-shop-list .arrow {
+  opacity: 1;
+  left: 15px;
+}
+.m-shop-list .arrow.arrow-right {
+  left: auto;
+  right: 15px;
+}
+.shop-card {
+  padding-left: 140px;
+  color: #727272;
+}
+.shop-card a {
+  color: #727272;
+}
+.shop-card a:hover {
+  color: #ff5722;
+}
+.shop-card .icon-links {
+  width: 100%;
+  position: relative;
+  bottom: none;
+  right: none;
+  overflow: hidden;
+}
+.shop-card .icon-links .icon-text {
+  display: none;
+}
+.shop-card .shop-name {
+  padding: 0;
+}
+.shop-card .shop-name a {
+  color: #212121;
+}
+.shop-card .shop-name a:hover {
+  color: #ff5722;
+}
+.shop-card .shop-img {
+  width: auto;
+  height: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.meta {
+  margin: 0 0 5px;
+}
+.meta-tags a {
+  text-decoration: underline;
+}
+.meta-tags a:hover {
+  text-decoration: none;
+}
+.shop-list-row {
+  height: 155px;
+  padding: 0 15px;
+  overflow: hidden;
+}
+.shop-list-row .m-product-list {
+  white-space: nowrap;
+  position: static;
+  overflow: hidden;
+}
+.shop-list-row .m-product-item {
+  float: none;
+  display: inline-block;
+  padding: 0;
+}
+.shop-list-row .m-product-info {
+  height: 155px;
+  padding: 0;
 }
 .category-1-name {
   width: 100%;
