--- a/myface-onface-html/src/views/block/_banner.html
+++ b/myface-onface-html/src/views/block/_banner.html
@@ -1,7 +1,7 @@
 <div class="wrap-banner">
 	<div class="row">
 		<!--banner-left-->
-		<div class="col-md-9 banner-left">
+		<div class="col-xs-12 col-ms-9 banner-left">
 			<div class="banner-item banner-1">
 				<button class="arrow arrow-left" aria-label=""><span class="icon"></span></button>
 					<div class="banner-1-inner">
@@ -12,7 +12,7 @@
 		</div><!--/.banner-left-->
 
 		<!--banner-right-->
-		<div class="col-md-3 banner-right">
+		<div class="col-xs-12 col-xs-3 banner-right">
 			<div class="banner-item banner-2">
 				<a href="#"><img src="assets/images/upload/banner/banner-3.jpg" alt="myface"></a>
 			</div><!--/.banner-2-->
