--- a/myface-onface-html/src/views/block/_header-user-shop.html
+++ b/myface-onface-html/src/views/block/_header-user-shop.html
@@ -1,10 +1,13 @@
-<header class="header-row-1">
+<header class="header-row-1 header-user-shop">
 	<!--header-row-1-->
 	<div class="container">
 		<div class="row">
 			<nav class="navbar">
 		    <div class="myfaceshop-logo">
-					<a href="index.html" title="myFace Shop">
+		    	<a href="index.html" title="myFace Shop" style="position: absolute; top: 0; left: 0; display: block; width:15px; height: 44px;">
+		    		<i class="fa fa-angle-left" aria-hidden="true"></i>
+		    	</a>
+					<a href="myface-user-shop.html" title="myFace Shop" style="width: 100%; padding-left: 30px;">
 						<h1 class="logo-text">
 							DW Secret Saigon
 						</h1>
