--- a/myface-onface-html/src/assets/less/style/block/m-product-block.less
+++ b/myface-onface-html/src/assets/less/style/block/m-product-block.less
@@ -127,6 +127,11 @@
   		content: "\f087";
   	}
   }
+  &.i-back {
+  	&:before {
+  		content: "\f104";
+  	}
+  }
 }
 .shop-name {
 	width: 100%;
