--- a/myface-onface-html/src/views/block/_header-user-shop.html
+++ b/myface-onface-html/src/views/block/_header-user-shop.html
@@ -4,10 +4,10 @@
 		<div class="row">
 			<nav class="navbar">
 		    <div class="myfaceshop-logo">
-		    	<a href="index.html" title="myFace Shop" style="position: absolute; top: 0; left: 0; display: block; width:15px; height: 44px;">
-		    		<i class="fa fa-angle-left" aria-hidden="true"></i>
+		    	<a class="back-to-myface" href="index.html" title="myFace Shop">
+		    		<span class="icon i-back"></span>
 		    	</a>
-					<a href="myface-user-shop.html" title="myFace Shop" style="width: 100%; padding-left: 30px;">
+					<a class="user-shop-logo" href="myface-user-shop.html" title="myFace Shop">
 						<h1 class="logo-text">
 							DW Secret Saigon
 						</h1>
