--- a/myface-onface-html/src/assets/less/style/block/footer.less
+++ b/myface-onface-html/src/assets/less/style/block/footer.less
@@ -44,6 +44,15 @@ footer{
 					&:hover {
 						color: @primary-color;
 					}
+					&.mf-about {
+						&:hover {
+							color: @text-color-2;
+							.readmore {
+								color: @primary-color;
+								text-decoration: none;
+							}
+						}
+					}
 					&.create-shop {
 						font-weight: 700;
 						color: @primary-color;
