--- a/myface-onface-html/src/assets/less/style/page/myface-user.less
+++ b/myface-onface-html/src/assets/less/style/page/myface-user.less
@@ -1,10 +1,13 @@
 .header-user-shop {
+	.myfaceshop-logo {
+		width: 135px;
+	}
 	.back-to-myface {
 		position: absolute; 
 		top: 0; 
 		left: 15px; 
 		display: block; 
-		width:15px; 
+		width:30px; 
 		height: 44px; 
 		display: table-cell; 
 		vertical-align: middle;
@@ -42,6 +45,5 @@
 	.tabs-bar {
 		border-bottom-color: transparent;
 		margin-bottom: 0;
-		margin-top: -10px;
 	}
 }
