--- a/myface-onface-html/src/assets/less/style/block/header.less
+++ b/myface-onface-html/src/assets/less/style/block/header.less
@@ -8,12 +8,12 @@
 	}
 }
 .myfaceshop-logo {
-	width: 135px;
+	width: 130px;
 	position: relative;
 	float: left;
 	padding-left: 15px;
 	padding-right: 0;
-	margin-top: -4px;
+	margin-top: 0px;
 	h1{
 		width: 100%;
 		margin: 0;
@@ -143,6 +143,10 @@
 		}
 	}
 }
+.account-dropdown {
+	top: 16px;
+  right: 0;
+}
 .account-img {
 	width: 38px;
 	height: 38px;
@@ -219,7 +223,13 @@
 	height: 60px;
 	overflow: hidden;
 	background-color: @bg-color-3;
+	border-bottom: @border;
 	margin-bottom: 20px;
+	&.breadcrumbs-nav,
+	&.shopper-menu {
+		height: auto;
+		overflow: visible;
+	}
 }
 .cate-list {
 	.cate-item {
