--- a/myface-onface-html/src/assets/less/style/page/myface-shop.less
+++ b/myface-onface-html/src/assets/less/style/page/myface-shop.less
@@ -2,7 +2,6 @@
 	width: 100%;
 	height: 100%;
 	.header-row-1 {
-		border-color: transparent;
 		margin-bottom: 0;
 	}
 }
@@ -12,7 +11,7 @@
 	float: left;
 	overflow: hidden;
 	.banner-item {
-		border: 1px solid #dfdfdf;
+		border: @border;
 		border-radius: @border-radius;
 		overflow: hidden;
 		img {
@@ -89,8 +88,7 @@
   height: 50px;
   float: left;
   margin-bottom: 40px; 
-  border-bottom: 1px solid #e5e5e5;
-  background: rgba(255,255,255,0.6);
+  border-bottom: @border;
   ul {
   	list-style: none;
   }
@@ -127,6 +125,9 @@
 		}
   }
   &:hover {
+  	> a {
+  		color: @primary-color;
+  	}
   	.tab-sub {
   		display: block;
   		background-color: #fff;
@@ -135,13 +136,14 @@
 }
 .tab-sub {
 	display: none;
-	width: 200px;
+	width: auto;
 	position: absolute;
+	min-width: 1px;
 	top: 90%;
 	left: 0;
 	z-index: 99;
 	margin: 0;
-	padding: 0;
+	padding: 1px 0;
 	text-align: left;
 }
 .wrap-product {
@@ -158,6 +160,7 @@
 	&:hover {
 		color: #fff;
 		background-color: @primary-color;
+		border-color: @primary-color;
 	}
 }
 
@@ -184,6 +187,7 @@
 .shop-card {
 	padding-left: 140px;
 	color: @text-color-2;
+	margin-bottom: 10px;
 	a {
 		color: @text-color-2;
 		&:hover {
