--- a/myface-onface-html/src/views/myface-shop-list.html
+++ b/myface-onface-html/src/views/myface-shop-list.html
@@ -77,6 +77,27 @@
       </li>
       {% endfor %}
     </ol>
+  </div><!--/.wrap-list-->
+  <!--loading-->
+  <div class="loading">
   </div>
+  <!--load-more-->
+  <div class="full-width load-more">
+    <button class="btn btn-loadmore">Xem thêm các sản phẩm khác </button>
+  </div>
+  <!--fixed-block-->
+  <div class="fixed-block" style="display: none;">
+    <!--cart-block-->
+    <div class="cart-block">
+      <a class="cart-link" href="cart.html" data-placement="bottom" title="" data-original-title="Giỏ hàng của bạn">
+        <span class="cart-number">0</span>
+      </a>
+    </div>
+    <div class="back-to-top">
+      <a class="back-to-top-btn" href="#">
+        back to top
+      </a>
+    </div>
+  </div><!--/.fixed-block-->
 </main>
 {% endblock %}
